--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+anyio==4.7.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+coloredlogs==15.0.1
 cryptography==44.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+humanfriendly==10.0
 idna==3.10
 pycparser==2.22
 requests==2.32.3
+sniffio==1.3.1
 urllib3==2.2.3
